--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,7 @@ cython_debug/
 
 # Project-specific files
 tfidf_matrix.npy
+
+# DB dumps from AcousticBrainz used to generate the DB, no need to pollute the repo.
+acousticbrainz-highlevel-sample-json-20220623/
+acousticbrainz-highlevel-json-20220623/
