--- a/.gitignore
+++ b/.gitignore
@@ -177,6 +177,7 @@ cython_debug/
 tfidf_matrix.npy
 feature_matrix.npy
 mbid_to_feature_index.npy
+features_and_index.npz
 
 # DB dumps from AcousticBrainz used to generate the DB, no need to pollute the repo.
 backend/scripts/acoustic-brainz/output.txt
