--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,8 @@ decorator==5.2.1
 Django==5.2.3
 djangorestframework==3.16.0
 executing==2.2.0
+factory_boy==3.3.3
+Faker==37.5.3
 ipykernel==6.29.5
 ipython==9.4.0
 ipython_pygments_lexers==1.1.1
