--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+#.env
 .venv
 env/
 venv/
@@ -174,15 +174,5 @@ cython_debug/
 .pypirc
 
 # Project-specific files
-tfidf_matrix.npy
-feature_matrix.npy
-mbid_to_feature_index.npy
 features_and_index.npz
-
-# DB dumps from AcousticBrainz used to generate the DB, no need to pollute the repo.
-backend/scripts/acoustic-brainz/output.txt
-backend/scripts/acoustic-brainz/highlevel/
-backend/scripts/acoustic-brainz/highlevel-partial/
-backend/scripts/acoustic-brainz/highlevel-full/
-backend/scripts/acoustic-brainz/sample/
-backend/scripts/acoustic-brainz/cache/
+output.txt
