--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ debugpy==1.8.15
 decorator==5.2.1
 Django==5.2.3
 djangorestframework==3.16.0
+dotenv==0.9.9
 executing==2.2.0
 factory_boy==3.3.3
 Faker==37.5.3
@@ -29,6 +30,7 @@ psutil==7.0.0
 pure_eval==0.2.3
 Pygments==2.19.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 pytz==2025.2
 pywin32==311
 pyzmq==27.0.0
