--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-# AcousticBrainz dataset can be downloaded from here: https://acousticbrainz.org/download
-
+# Paths to where AcousticBrainz dataset files were unzipped. 
+# Archives can be downloaded from here: https://acousticbrainz.org/download
 AB_HIGHLEVEL_ROOT=D:/Datasets/AcousticBrainz/High-level
 AB_HIGHLEVEL_PARTS=30
 AB_SAMPLE_ROOT=D:/Datasets/AcousticBrainz/Sample
