--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-#.env
+.env
 .venv
 env/
 venv/
@@ -176,3 +176,4 @@ cython_debug/
 # Project-specific files
 features_and_index.npz
 output.txt
+db.sqbpro
