--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,8 @@
 # Archives can be downloaded from here: https://acousticbrainz.org/download
 AB_HIGHLEVEL_ROOT=D:/Datasets/AcousticBrainz/High-level
 AB_SAMPLE_ROOT=D:/Datasets/AcousticBrainz/Sample
+POSTGRES_DB=taste_mender_db
+POSTGRES_USER=django
+POSTGRES_PASSWORD=password
+POSTGRES_HOST=127.0.0.1
+POSTGRES_PORT=5432
