--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,6 +33,8 @@ pillow==11.3.0
 platformdirs==4.3.8
 prompt_toolkit==3.0.51
 psutil==7.0.0
+psycopg==3.2.10
+psycopg-binary==3.2.10
 pure_eval==0.2.3
 Pygments==2.19.2
 pyparsing==3.2.3
@@ -50,6 +52,7 @@ threadpoolctl==3.6.0
 tornado==6.5.1
 tqdm==4.67.1
 traitlets==5.14.3
+typing_extensions==4.15.0
 tzdata==2025.2
 wcwidth==0.2.13
 zstandard==0.24.0
