--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ cycler==0.12.1
 debugpy==1.8.15
 decorator==5.2.1
 Django==5.2.3
+django-filter==25.1
 djangorestframework==3.16.0
 dotenv==0.9.9
 executing==2.2.0
