--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
 asttokens==3.0.0
+attrs==25.3.0
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.3
@@ -10,15 +11,19 @@ Django==5.2.3
 django-filter==25.1
 djangorestframework==3.16.0
 dotenv==0.9.9
+drf-spectacular==0.28.0
 executing==2.2.0
 factory_boy==3.3.3
 Faker==37.5.3
 fonttools==4.59.2
+inflection==0.5.1
 ipykernel==6.29.5
 ipython==9.4.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 joblib==1.5.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 kiwisolver==1.4.9
@@ -43,7 +48,10 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 pywin32==311
+PyYAML==6.0.2
 pyzmq==27.0.0
+referencing==0.36.2
+rpds-py==0.27.1
 scikit-learn==1.7.0
 scipy==1.15.3
 six==1.17.0
@@ -55,5 +63,6 @@ tqdm==4.67.1
 traitlets==5.14.3
 typing_extensions==4.15.0
 tzdata==2025.2
+uritemplate==4.2.0
 wcwidth==0.2.13
 zstandard==0.24.0
