Add endpoint for getting playable video sources for tracks

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,8 +2,18 @@
 # Archives can be downloaded from here: https://acousticbrainz.org/download
 AB_HIGHLEVEL_ROOT=D:/Datasets/AcousticBrainz/High-level
 AB_SAMPLE_ROOT=D:/Datasets/AcousticBrainz/Sample
+
+# PostgreSQL settings
 POSTGRES_DB=taste_mender_db
 POSTGRES_USER=django
 POSTGRES_PASSWORD=password
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
+
+# Django settings
+DJANGO_SECRET_KEY="django-secret-key"
+DJANGO_DEBUG="True"
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+
+# External API keys
+YOUTUBE_API_KEY="youtube-api-key"
