--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
 asttokens==3.0.0
 attrs==25.3.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.3
@@ -17,6 +19,7 @@ executing==2.2.0
 factory_boy==3.3.3
 Faker==37.5.3
 fonttools==4.59.2
+idna==3.10
 inflection==0.5.1
 ipykernel==6.29.5
 ipython==9.4.0
@@ -52,6 +55,7 @@ pywin32==311
 PyYAML==6.0.2
 pyzmq==27.0.0
 referencing==0.36.2
+requests==2.32.5
 rpds-py==0.27.1
 scikit-learn==1.7.0
 scipy==1.15.3
@@ -65,6 +69,7 @@ traitlets==5.14.3
 typing_extensions==4.15.0
 tzdata==2025.2
 uritemplate==4.2.0
+urllib3==2.5.0
 wcwidth==0.2.13
 whitenoise==6.10.0
 zstandard==0.24.0
