--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ debugpy==1.8.15
 decorator==5.2.1
 Django==5.2.3
 django-cors-headers==4.8.0
+django-extensions==4.1
 django-filter==25.1
 djangorestframework==3.16.0
 dotenv==0.9.9
@@ -19,6 +20,7 @@ executing==2.2.0
 factory_boy==3.3.3
 Faker==37.5.3
 fonttools==4.59.2
+graphviz==0.21
 idna==3.10
 inflection==0.5.1
 ipykernel==6.29.5
@@ -46,6 +48,7 @@ psutil==7.0.0
 psycopg==3.2.10
 psycopg-binary==3.2.10
 pure_eval==0.2.3
+pydot==4.0.1
 Pygments==2.19.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
