--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -50,6 +50,7 @@ psycopg-binary==3.2.10
 pure_eval==0.2.3
 pydot==4.0.1
 Pygments==2.19.2
+Pympler==1.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
