--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,6 +33,7 @@ jsonschema-specifications==2025.9.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 kiwisolver==1.4.9
+lmdb==1.7.3
 matplotlib==3.10.6
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
